@@ -16,6 +16,8 @@ Version 1.9.6
        displays when Show Whitespaces option is enabled. (Ivan Zhakov)
 - BUG: Flickering mouse cursor when hovering over the log filter
        edit box. (Ivan Zhakov)
+- CHG: New action icons and minor high dpi refinements in the log
+       dialog. (Ivan Zhakov)
 
 Version 1.9.5
 - BUG: The "go to next diff" in TortoiseMerge stopped at
